fixed whitespaces?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,69 +8,69 @@
  */
 
 body {
-	background-color: #f2f2f2;
-	font-family: "Lato";
-	font-weight: 300;
-	font-size: 16px;
-	color: #555;
+  background-color: #f2f2f2;
+    font-family: "Lato";
+    font-weight: 300;
+    font-size: 16px;
+    color: #555;
 
-	-webkit-font-smoothing: antialiased;
-	-webkit-overflow-scrolling: touch;
+    -webkit-font-smoothing: antialiased;
+    -webkit-overflow-scrolling: touch;
 }
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Raleway";
-	font-weight: 300;
-	color: #333;
+    font-family: "Raleway";
+    font-weight: 300;
+    color: #333;
 }
 
 
 /* Paragraph & Typographic */
 p {
-	line-height: 28px;
-	margin-bottom: 25px;
+    line-height: 28px;
+    margin-bottom: 25px;
 }
 
 .centered {
-	text-align: center;
+    text-align: center;
 }
 
 /* Links */
 a {
-	color: #f85c37;
-	word-wrap: break-word;
+    color: #f85c37;
+    word-wrap: break-word;
 
-	-webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-	-moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-	-ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-	-o-transition: color 0.1s ease-in, background 0.1s ease-in;
-	transition: color 0.1s ease-in, background 0.1s ease-in;
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
 a:hover,
 a:focus {
-	color: #7b7b7b;
-	text-decoration: none;
-	outline: 0;
+    color: #7b7b7b;
+    text-decoration: none;
+    outline: 0;
 }
 
 a:before,
 a:after {
-	-webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-	-moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-	-ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-	-o-transition: color 0.1s ease-in, background 0.1s ease-in;
-	transition: color 0.1s ease-in, background 0.1s ease-in;
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
-hr {
-	display: block;
-	height: 1px;
-	border: 0;
-	border-top: 1px solid #ccc;
-	margin: 1em 0;
-	padding: 0;
+ hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
 
 
@@ -88,15 +88,15 @@ hr {
 	min-height: 700px;
 	width: 100%;
 	
-	-webkit-background-size: 100%;
-	-moz-background-size: 100%;
-	-o-background-size: 100%;
-	background-size: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #headerwrap h1 {
@@ -125,15 +125,15 @@ hr {
 	min-height: 500px;
 	width: 100%;
 	
-	-webkit-background-size: 100%;
-	-moz-background-size: 100%;
-	-o-background-size: 100%;
-	background-size: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 
@@ -228,15 +228,15 @@ hr {
 	min-height: 500px;
 	width: 100%;
 	
-	-webkit-background-size: 100%;
-	-moz-background-size: 100%;
-	-o-background-size: 100%;
-	background-size: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #itemwrap h1 {
@@ -420,7 +420,7 @@ hr {
 		-ms-transition: all .1s ease-in-out;
 		 -o-transition: all .1s ease-in-out;
 			transition: all .1s ease-in-out;
-	border-radius:4px;
+    border-radius:4px;
 }
 
 #menuToggle:hover {
@@ -474,6 +474,3 @@ hr {
 /* MAP */
 #oSC14map { height: 500px; }
 .leaflet-shadow-pane {display: none;}
-
-/* Location */
-.venue_info {color:white; font-weight:bold;}
